# qbpm

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  manifest.webmanifest  package.json  pyproject.toml  start.sh  sw.js
configs/: colossus.yaml  default.yaml
deploy/: build-static.sh  nginx-qbitos.conf.example
foundation/: README.md  __init__.py  grok_paths.py  grok_presets.py  metadata.yaml
graphs/: default.json  live-music.json
schemas/: graph.schema.json
scripts/: capture-readme-screenshots.mjs  publish-fornevercollective.sh
static/: api-bridge.js  canvas-collab.js  collab-shell.js  daw-link.js  dj-scratch-spot.js  env-config.json  float-workspace.css  float-workspace.js  gpu-loop.js  grok-playground.js  grok-terminal.js  header-play-strip.js  header-stage.js  header-waveform.js  jam-ecosystem.json  kbatch-panel.js  launch-config.json  live-jam-bridge.js  live-music-bridge.js  live-node-panel.js  live-video-rail.js  music-core.js  music-lab.js  music-panes.js  music-theory.js  node-layout.js  pages-boot.js  pages.js  processing-wing.js  qbpm.css  qbpm.js  qube-manager.js  static-tools.json  studio-presets.js  tab-runtime.js  terminal-commands.js  tools-panel.js  vfx-compositor.js  vfx-palette.js  video-embed-parse.js  (+5 more)
tests/: test_graph.py  test_graph_ws.py  test_grok_terminal.py  test_live_music.py  test_video_imagine.py
web/: canvas-collab.js  canvas-groups.js  collab-shell.js  daw-link.js  device-presets.js  dj-scratch-spot.js  float-dock.js  float-workspace.css  float-workspace.js  grok-terminal.js  header-play-strip.js  index.html  (+38 more)
(+77 files in other folders)
