[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qbpm"
version = "0.1.0"
description = "qbitOS node process manager — JSON graph, Python/JAX up, CUDA down"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0", "httpx>=0.27"]
jax = ["jax>=0.4", "jaxlib>=0.4"]

[project.scripts]
qbpm = "qbpm.api:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]